<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fruit"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_fruit" />
        <item
            android:id="@+id/nav_coordinator"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/fruit_coordinator" />
        <item
            android:id="@+id/nav_rv"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rv" />

        <item
            android:id="@+id/nav_tabs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tabs" />

        <item
            android:id="@+id/nav_bottom"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_bottomTabs" />
    </group>
</menu>
