<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.homeScreen.HomeScreenFragmentImpl"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fruit"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.fruitScreen.FruitScreenFragmentImpl"
        android:label="@string/menu_fruit"
        tools:layout="@layout/fragment_fruit" />

    <fragment
        android:id="@+id/nav_coordinator"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.coordiantorScreen.CoordinatorScreenFragmentImpl"
        android:label="@string/menu_coordinator"
        tools:layout="@layout/fragment_coordinator_screen" />

    <fragment
        android:id="@+id/nav_rv"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.rvScreen.RvScreenFragmentImpl"
        android:label="@string/menu_rv"
        tools:layout="@layout/fragment_recycler_view" />

    <fragment
        android:id="@+id/nav_tabs"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.tabsScreen.TabsScreenFragmentImpl"
        android:label="@string/menu_tabs"
        tools:layout="@layout/fragment_tabs" />

    <fragment
        android:id="@+id/nav_bottom"
        android:name="com.home.dev.mymaterialapplication.ui.mainScreen.bottomScreen.BottomScreenFragmentImpl"
        android:label="@string/menu_bottomTabs"
        tools:layout="@layout/fragment_bottom_tabs" />
</navigation>